<resources>

   <string name="app_id">258100527681029</string>
    <string name="app_name">Lost &amp; Found</string>
    <string name="action_settings">Ajustes</string>
    <string name="title_activity_splash">Splash</string>
    <string name="app_title">Lost &amp; Found</string>
    <string name="app_subtitle">busca • encuentra • reporta</string>
    <string name="title_activity_login_screen"></string>
    <string name="app_registrer">Registrarme</string>
    <string name="app_newpass">Recuperar contraseña</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="report_home">Busca Hogar</string>
    <string name="report_resolve">¡Resuelto!</string>
    <string name="userName">Asukita Pam</string>
    <string name="userMsg">Acabo de ver un perrito abandonado cerca de la estación de Xochimilco&#8230;</string>
    <string name="postTime">hace 2 horas</string>
    <string name="leerMas">Leer más</string>
    <string name="alertLbl">Alerta</string>
    <string name="report">Reportar</string>
    <string name="share">Compartir</string>
    <string name="numComnts">233</string>
    <string name="userMsgLarge">Acabo de ver un perrito abandonado cerca de la estación de Xochimilco, cada vez que paso lo veo comiendo basura, está lastimado.No veo que tenga dueño. Ojalá que alguien pueda hacerse cargo de él!</string>
    <string name="pinIt">Marcar</string>
    <string name="checked">Atendido o Resuelto</string>
    <string name="title_activity_report"></string>
    <string name="reportType_title">Tipo de Reporte</string>
    <string name="reportPetName_lbl">Nombre</string>
    <string name="reportPetAge_lbl">Edad</string>
    <string name="reportPetType_lbl">Tipo</string>
    <string name="reportPetReportTel_lbl">Teléfono</string>
    <string name="reportPetFeatures_lbl">Características</string>
    <string name="reportPetReportMsg_lbl">Escribe tu mensaje</string>
    <string name="reportPetReportTakePic_lbl">Toma Foto</string>
    <string name="reportPetReportSelectPic_lbl">Escoge Foto</string>
    <string name="reportPetFeatures_txt">(Color, tamaño, raza, etc.)</string>
    <string name="publish">Publicar</string>
    <string name="entry_title_home">Home</string>
    <string name="entry_title_1">Mostrar Alertas</string>
    <string name="entry_title_2">Mis reportes</string>
    <string name="entry_title_3">Extraviados</string>
    <string name="entry_title_4">Encontrados</string>
    <string name="entry_title_5">Maltrato</string>
    <string name="entry_title_6">Busca hogar</string>
    <string name="entry_title_7">Reportes en mapa</string>
    <string name="entry_title_8">Accidente</string>
    <string name="entry_title_9">Califica nuestra app</string>
    <string name="entry_title_10">DONAR</string>
    <string name="dog_label">Perro</string>
    <string name="reportDate_title">Fecha de reporte</string>
    <string name="report_date">10 / Ago  / 2013</string>
    <string name="unknown">DESCONOCIDO</string>
    <string name="report_aproxAge">2 años aprox.</string>
    <string name="reportPetCaracteristics_lbl">Características</string>
    <string name="reportPetCaracteristics_txt">Perro grande, heridas en la cadera y hocico</string>
    <string name="user2Name">Julius</string>
    <string name="user2Msg">¿Sabes si alguien está cerca?</string>
    <string name="postTime2">hace 2 minutos</string>
    <string name="report_abuse">Reporte de Maltrato</string>
    <string name="userMsg2">Mi vecina tiene 3 gatos encerrados y desde afuera puedo ver que están flacos&#8230;</string>
    <string name="title_activity_register"></string>
    <string name="lblRegister">Crea tu cuenta</string>
    <string name="lblRegisterUserName">Usuario</string>
    <string name="lblRegisterUserMail">Email</string>
    <string name="lblRegisterUserCountry">País</string>
    <string name="lblRegisterUserCity">Ciudad</string>
    <string name="lblRegisterUserSex">Género</string>
    <string name="lblRegisterUserBirthday">Cumpleaños</string>
    <string name="lblRegisterUserPass">Password</string>
    <string name="lblRegisterUserRePass">Confirma tu Password</string>
    <string name="lblRegisterUserPic">Foto</string>
    <string name="registerTerms">Al continuar acepto los <a href="http://pawhub.me/aviso-privacidad.html"> Términos de Uso</a></string>
    <string name="title_activity_list_reports"></string>
    <string name="reportListDateLbl">Fecha </string>
    <string name="cancel">Cancelar</string>
    <string name="similary">Estos son los reportes similares:</string>
    <string name="title_activity_details"></string>
    
    <string name="title_section1">IMAGENES</string>
    <string name="title_section2">MENSAJES</string>
    <string name="title_section3">MAPA</string>
    
    <string name="title_activity_settings"></string>
    <string name="lblOptsDialogSimilary">Ver reportes similares</string>
    <string name="lblOptsInadequate">Reportar como inadecuado</string>
    <string name="title_activity_full_image">FullImage</string>
    <string name="hello_world">Hello world!</string>

</resources>
