<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F1F1F1"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="0.33"
            android:orientation="vertical" >

            <TextView
                android:layout_width="255dp"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/dog_icon"
                android:drawablePadding="4dp"
                android:text="@string/dog_label"
                android:textColor="#656565"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reportDate_title"
                android:textColor="#B4B4B4"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_date"
                android:textColor="#656565"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="0.33"
            android:orientation="vertical"
            android:paddingLeft="8dp" >

            <TextView
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:text="@string/reportPetName_lbl"
                android:textColor="#B4B4B4"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unknown"
                android:textColor="#656565"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reportPetAge_lbl"
                android:textColor="#B4B4B4"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/report_aproxAge"
                android:textColor="#656565"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_weight="0.33"
            android:orientation="vertical"
            android:paddingLeft="8dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reportPetCaracteristics_lbl"
                android:textColor="#B4B4B4"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="@string/reportPetCaracteristics_txt"
                android:textColor="#656565"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>
    
    <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:id="@+id/linearTypePostDetail2"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/detail_chart_green"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imageTypePostHomeDetail2"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="2dp"
                        android:contentDescription="@string/report"
                        android:src="@drawable/home_ico" />

                    <TextView
                        android:id="@+id/textActivityTypePostHomeDetail2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="6dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="6dp"
                        android:fontFamily="open-sans"
                        android:text="@string/report_home"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageArrowDownDetail"
                    android:layout_width="25dp"
                    android:layout_height="18dp"
                    android:layout_alignRight="@+id/linearTypePostDetail2"
                    android:layout_alignTop="@+id/linearTypePostDetail2"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="6dp"
                    android:contentDescription="@string/report"
                    android:src="@drawable/arrow_down" />
            </RelativeLayout>

    <LinearLayout
        android:id="@+id/layoutDetailDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginBottom="-50dip" 
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/imageUserDetail1"
            android:layout_width="43dp"
            android:layout_height="43dp"
            android:layout_marginLeft="6dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/user" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <LinearLayout
                android:id="@+id/lineardetailP3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/textActivityUserNameDetail1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="open-sans"
                    android:text="@string/userName"
                    android:textColor="#656565"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/userMsgLargeDetail1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:background="#00000000"
                    android:ems="10"
                    android:enabled="false"
                    android:focusable="false"
                    android:fontFamily="open-sans"
                    android:inputType="textMultiLine"
                    android:lineSpacingExtra="0dp"
                    android:text="@string/userMsgLarge"
                    android:textColor="#656565"
                    android:textSize="14sp"
                    android:typeface="sans" >
                </EditText>
            </LinearLayout>

            <TextView
                android:id="@+id/textActivityTimeDetail1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignRight="@+id/lineardetailP3"
                android:layout_alignTop="@+id/lineardetailP3"
                android:layout_marginRight="9dp"
                android:layout_marginTop="10dp"
                android:fontFamily="open-sans"
                android:text="@string/postTime"
                android:textColor="#B71C4E"
                android:textSize="14sp" />
        </RelativeLayout>
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <android.support.v4.view.PagerTitleStrip
            android:id="@+id/pager_title_strip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:background="#B71C4E"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:textColor="#656565" />
    </android.support.v4.view.ViewPager>

</LinearLayout>