<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:orientation="vertical"
        android:paddingBottom="30dp" >

        <LinearLayout
            android:id="@+id/lineardetailM1"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="#FFFFFF"
            android:orientation="vertical" >


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearTypePostDetail3"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:background="@drawable/detail_chart_blue"
                    android:orientation="horizontal" >

                    <ImageView
                        android:id="@+id/imageTypePostHome"
                        android:layout_width="23dp"
                        android:layout_height="23dp"
                        android:layout_margin="3dp"
                        android:contentDescription="@string/report"
                        android:src="@drawable/home_ico" />

                    <TextView
                        android:id="@+id/textActivityTypePostHomeDetailP1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_marginRight="3dp"
                        android:layout_marginTop="8dp"
                        android:fontFamily="open-sans"
                        android:text="@string/report_home"
                        android:textColor="#FFFFFF"
                        android:textSize="15sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imageArrowDownDetailP"
                    android:layout_width="25dp"
                    android:layout_height="18dp"
                    android:layout_alignRight="@+id/linearTypePostDetail3"
                    android:layout_alignTop="@+id/linearTypePostDetail3"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="6dp"
                    android:contentDescription="@string/report"
                    android:src="@drawable/arrow_down" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#E0E0E0"
                android:baselineAligned="false"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="1" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="0.33"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="255dp"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/dog_icon"
                        android:drawablePadding="4dp"
                        android:text="@string/dog_label"
                        android:textColor="#656565"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/reportDate_title"
                        android:textColor="#B4B4B4"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/report_date"
                        android:textColor="#656565"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="0.33"
                    android:orientation="vertical"
                    android:paddingLeft="8dp" >

                    <TextView
                        android:layout_width="250dp"
                        android:layout_height="wrap_content"
                        android:text="@string/reportPetName_lbl"
                        android:textColor="#B4B4B4"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/unknown"
                        android:textColor="#656565"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reportPetAge_lbl"
                        android:textColor="#B4B4B4"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/report_aproxAge"
                        android:textColor="#656565"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="0.33"
                    android:orientation="vertical"
                    android:paddingLeft="8dp" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reportPetCaracteristics_lbl"
                        android:textColor="#B4B4B4"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="5dp"
                        android:text="@string/reportPetCaracteristics_txt"
                        android:textColor="#656565"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/detailReportContainer"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:orientation="horizontal" >

                <fragment
                    android:id="@+id/detailReportMap"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    class="com.google.android.gms.maps.SupportMapFragment" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</ScrollView>