<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B71C4E"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".SplashScreen" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-170dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/splash_logo" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="25dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/splash_app_tittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="open-sans"
            android:text="@string/app_title"
            android:textSize="46sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/splash_app_subtittle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="open-sans"
            android:text="@string/app_subtitle"
            android:textColor="#FFFFFF"
            android:textSize="22sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|center_horizontal"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="85dp"
            android:layout_height="49dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/pawhub_site" />
    </LinearLayout>

</RelativeLayout>